--- a/image/templates/image_vm_create.html
+++ b/image/templates/image_vm_create.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 {% endblock %}
-{% block title %}创建镜像虚拟机{% endblock %}
+{% block title %}创建镜像云主机{% endblock %}
 
 {% block boby %}
     <div class="container-fluid col-12">
