--- a/reports/templates/quota.html
+++ b/reports/templates/quota.html
@@ -82,7 +82,7 @@
 
             create_chart(canvas_cpu, 'VCPU数', vcpu_subtitle, {total: cpu_total, used: cpu_used});
             create_chart(canvas_mem, mem_title, mem_subtitle, {total: mem_total, used: mem_used});
-            create_chart(canvas_ips, 'IP数', ips_subtitle, {total: ips_total, used: ips_used});
+            create_chart(canvas_ips, 'IP地址数', ips_subtitle, {total: ips_total, used: ips_used});
             create_chart(canvas_vm, '云主机数', vm_subtitle, {total: vm_total, used: vm_used});
         }
     </script>
