--- a/device/templates/pci_list.html
+++ b/device/templates/pci_list.html
@@ -78,7 +78,7 @@
                     <th>ID</th>
                     <th>设备类型</th>
                     <th>宿主机</th>
-                    <th>虚拟机</th>
+                    <th>云主机</th>
                     <th>挂载时间</th>
                     <th width="180px">备注</th>
                     <th>操作</th>
