--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -70,7 +70,7 @@
                     <th style="width: 60px">启用</th>
                     <th style="width: 90px">系统类型</th>
                     <th style="width: 100px">镜像标签</th>
-                    <th style="width: 180px">虚拟机模板</th>
+                    <th style="width: 180px">云主机模板</th>
                     <th style="width: 220px">生效快照</th>
 
                     <th>备注</th>
@@ -215,13 +215,13 @@
                                     </div>
                                     {% if user.is_superuser and  image.vm_uuid %}
                                         <div class="form-group row">
-                                            <label for="name" class="col-sm-1 col-form-label">虚拟机ID</label>
+                                            <label for="name" class="col-sm-1 col-form-label">云主机ID</label>
                                             <span class="col-sm-3 form-control-plaintext"
                                                   id="name">{{ image.vm_uuid }}</span>
-                                            <label for="version" class="col-sm-1 col-form-label">虚拟机内存</label>
+                                            <label for="version" class="col-sm-1 col-form-label">云主机内存</label>
                                             <span class="col-sm-3 form-control-plaintext"
                                                   id="version">{{ image.vm_mem }}GB</span>
-                                            <label for="sys_type_display" class="col-sm-1 col-form-label">虚拟机CPU</label>
+                                            <label for="sys_type_display" class="col-sm-1 col-form-label">云主机CPU</label>
                                             <span class="col-sm-3 form-control-plaintext"
                                                   id="sys_type_display">{{ image.vm_vcpu }}核</span>
                                         </div>
