--- a/network/templates/vlan_add.html
+++ b/network/templates/vlan_add.html
@@ -18,7 +18,7 @@
                     <thead class="thead-light">
                     <tr>
                         <th>名称</th>
-                        <th>子网IP</th>
+                        <th>子网IP地址</th>
                         <th>子网掩码</th>
                         <th>网关</th>
                     </tr>
@@ -34,7 +34,7 @@
                 </table>
             </div>
             <div class="card-header">
-                <span class="card-title"><strong>生成子网主机IP列表</strong></span>
+                <span class="card-title"><strong>生成子网主机IP地址列表</strong></span>
                 <!-- <span><a class="btn btn-xs btn-primary pull-right" href="">
                     <span class="glyphicon glyphicon-plus"></span>全部导入
                 </a></span> -->
@@ -44,13 +44,13 @@
                     {% csrf_token %}
                     <div class="input-group" style="">
                         <div class="input-group-prepend">
-                            <label class="input-group-text">起始IP</label>
+                            <label class="input-group-text">起始IP地址</label>
                         </div>
-                        <input name="start_ip" class="form-control" type="text" value="" placeholder="输入起始IP"/>
+                        <input name="start_ip" class="form-control" type="text" value="" placeholder="输入起始IP地址"/>
                         <div class="input-group-prepend">
-                            <label class="input-group-text">结束IP</label>
+                            <label class="input-group-text">结束IP地址</label>
                         </div>
-                        <input name="end_ip" class="form-control" type="text" value="" placeholder="输入结束IP"/>
+                        <input name="end_ip" class="form-control" type="text" value="" placeholder="输入结束IP地址"/>
                         <div class="input-group-append">
                             <button id="generate" type="submit" class="btn btn-primary form-control">生成</button>
                         </div>
@@ -62,8 +62,8 @@
                 <table id="table-add" class="table table-vm-list" style="word-wrap:break-word;word-break:break-all;">
                     <tr>
                         <th>主机名称</th>
-                        <th>IP</th>
-                        <th>MAC</th>
+                        <th>IP地址</th>
+                        <th>MAC地址</th>
                     </tr>
 {#                    <!-- {% for macip in macips %}#}
 {#                    <tr>#}
