--- a/network/templates/vlan_list.html
+++ b/network/templates/vlan_list.html
@@ -19,14 +19,14 @@
                     <tr>
                         <th>编号</th>
                         <th>网桥名</th>
-                        <th>vlan id</th>
+                        <th>VLANID</th>
                         <th>VLAN描述</th>
                         <th>类型</th>
                         <th>标签</th>
-                        <th>子网IP</th>
+                        <th>子网IP地址</th>
                         <th>子网掩码</th>
                         <th>网关</th>
-                        <th>空闲IP</th>
+                        <th>空闲IP地址(可用/总数)</th>
                         <th>状态</th>
                         <th>备注</th>
                         <th>操作选项</th>
