--- a/reports/templates/reports_group.html
+++ b/reports/templates/reports_group.html
@@ -52,7 +52,7 @@
                         <table class="table" id="id-table-host">
                             <thead class="thead-light">
                             <tr>
-                                <th>IP</th>
+                                <th>IP地址</th>
                                 <th>宿主机组</th>
                                 <th>总cpu(/核)</th>
                                 <th>已分配cpu(/核)</th>
