--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -105,7 +105,7 @@
                         <table class="table">
                             <thead class="thead-light">
                             <tr>
-                                <th>宿主机IP</th>
+                                <th>宿主机IP地址</th>
                                 <th>机组</th>
                                 <th>物理cpu(/核)</th>
                                 <th>虚拟cpu(/核)</th>
