--- a/vms/templates/vm_attach_ip_list.html
+++ b/vms/templates/vm_attach_ip_list.html
@@ -11,10 +11,10 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>附加IP</strong></span>
+                <span class="card-title"><strong>附加IP地址</strong></span>
                 <div class="float-right">
-                    <a class="btn btn-sm btn-primary"
-                       href="{% url 'vms:vm-detach-ip' vm_uuid=vm_uuid %}">移除IP</a>
+{#                    <a class="btn btn-sm btn-primary"#}
+{#                       href="{% url 'vms:vm-detach-ip' vm_uuid=vm_uuid %}">移除IP</a>#}
                     <a class="btn btn-sm btn-info" href="{% url 'network:vlan_show' %}?vlan={{ vlan_id }}">IP地址列表</a>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                         <dl class="row">
                             <dt class="col-2 text-right">云主机UUID:</dt>
                             <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
-                            <dt class="col-2 text-right">云主机IP:</dt>
+                            <dt class="col-2 text-right">云主机IP地址:</dt>
                             <dd class="col-10">{{ vm.ipv4 }}</dd>
                             <dt class="col-2 text-right">镜像:</dt>
                             <dd class="col-10">{{ vm.image_name }}</dd>
@@ -58,7 +58,7 @@
                     <tr>
                         <th>编号</th>
                         <th>IP地址</th>
-                        <th>MAC</th>
+                        <th>MAC地址</th>
                         <th>网桥名</th>
                         <th>VLAN描述</th>
                         <th>标签</th>
@@ -77,7 +77,7 @@
 
                             <td>
                                 <button class="btn btn-primary btn-vm-attach-ip" data-attach-ip-id="{{ ip.id }}"
-                                        data-vm-uuid="{{ vm_uuid }}">附加IP
+                                        data-vm-uuid="{{ vm_uuid }}">附加IP地址
                                 </button>
                             </td>
                         </tr>
