--- a/vms/templates/vm_detach_ip_list.html
+++ b/vms/templates/vm_detach_ip_list.html
@@ -19,7 +19,7 @@
                     <dl class="row">
                         <dt class="col-2 text-right">云主机UUID:</dt>
                         <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
-                        <dt class="col-2 text-right">云主机IP:</dt>
+                        <dt class="col-2 text-right">云主机IP地址:</dt>
                         <dd class="col-10">{{ vm.ipv4 }}</dd>
                         <dt class="col-2 text-right">镜像:</dt>
                         <dd class="col-10">{{ vm.image_name }}</dd>
@@ -52,7 +52,7 @@
                 <tr>
                     <th>编号</th>
                     <th>IP地址</th>
-                    <th>MAC</th>
+                    <th>MAC地址</th>
                     <th>网桥名</th>
                     <th>VLAN描述</th>
                     <th>标签</th>
@@ -73,7 +73,7 @@
 
                         <td>
                             <button class="btn btn-primary btn-vm-detach-ip" data-detach-ip-id="{{ ip.sub_ip.id }}"
-                                    data-vm-uuid="{{ vm_uuid }}">移除IP
+                                    data-vm-uuid="{{ vm_uuid }}">移除IP地址
                             </button>
                         </td>
                     </tr>
