--- a/vms/templates/vm_unshelve.html
+++ b/vms/templates/vm_unshelve.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="id-ipv4" class="offset-sm-1 col-sm-2 text-right col-form-label">IP</label>
+                        <label for="id-ipv4" class="offset-sm-1 col-sm-2 text-right col-form-label">IP地址</label>
                         <div class="col-sm-7">
                             <select name="ipv4" class="form-control" id="id-ipv4">
                                 {% if last_ip %}
