--- a/vdisk/templates/vdisk_mount_to_vm.html
+++ b/vdisk/templates/vdisk_mount_to_vm.html
@@ -44,7 +44,7 @@
                                         <label class="input-group-text" for="id-center">关键字</label>
                                     </div>
                                     <input type="text" class="form-control" name="search" value="{{ search }}"
-                                           placeholder="搜 UUID、IP、备注"/>
+                                           placeholder="搜 UUID、IP地址、备注"/>
                                     <span class="input-group-prepend"></span>
                                     <button type="submit" class="btn btn-primary form-control">筛选</button>
                                 </div>
