ipv6 批量生成， mac地址顺序生成， 优化附加IP查询、首页附加IP模糊查询

--- a/network/templates/vlan_add.html
+++ b/network/templates/vlan_add.html
@@ -51,6 +51,10 @@
                             <label class="input-group-text">结束IP地址</label>
                         </div>
                         <input name="end_ip" class="form-control" type="text" value="" placeholder="输入结束IP地址"/>
+                        <select name="iptype" class="iptype-select" id="id-iptype" style="border: 1px solid #ced4da">
+                            <option value="ipv4">ipv4</option>
+                            <option value="ipv6">ipv6</option>
+                        </select>
                         <div class="input-group-append">
                             <button id="generate" type="submit" class="btn btn-primary form-control">生成</button>
                         </div>
