vlan增加ipv6 子网、掩码、网关dns,mac增加ipv6字段

--- a/network/templates/vlan_add.html
+++ b/network/templates/vlan_add.html
@@ -21,6 +21,9 @@
                         <th>子网IP地址</th>
                         <th>子网掩码</th>
                         <th>网关</th>
+                        <th>子网IP地址(ipv6)</th>
+                        <th>子网掩码(ipv6)</th>
+                        <th>网关(ipv6)</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -29,6 +32,9 @@
                         <th>{{ vlan.subnet_ip }}</th>
                         <th>{{ vlan.net_mask }}</th>
                         <th>{{ vlan.gateway }}</th>
+                        <th>{{ vlan.subnet_ip_v6 }}</th>
+                        <th>{{ vlan.net_mask_v6 }}</th>
+                        <th>{{ vlan.gateway_v6 }}</th>
                     </tr>
                     </tbody>
                 </table>
