--- a/network/templates/vlan_list.html
+++ b/network/templates/vlan_list.html
@@ -26,6 +26,9 @@
                         <th>子网IP地址</th>
                         <th>子网掩码</th>
                         <th>网关</th>
+                        <th>子网IP地址(IPv6)</th>
+                        <th>子网掩码(IPv6)</th>
+                        <th>网关(IPv6)</th>
                         <th>空闲IP地址(可用/总数)</th>
                         <th>状态</th>
                         <th>备注</th>
@@ -44,6 +47,9 @@
                         <th>{{ vlan.subnet_ip }}</th>
                         <th>{{ vlan.net_mask }}</th>
                         <th>{{ vlan.gateway }}</th>
+                        <th>{{ vlan.subnet_ip_v6 |default_if_none:""}}</th>
+                        <th>{{ vlan.net_mask_v6 |default_if_none:""}}</th>
+                        <th>{{ vlan.gateway_v6 |default_if_none:""}}</th>
                         <th>{{ vlan.free_ip }}</th>
                         {% if vlan.enable %}
                             <th><i class="fa fa-check"></i></th>
