--- a/vms/templates/vm_live_migrate.html
+++ b/vms/templates/vm_live_migrate.html
@@ -32,7 +32,7 @@
                         <hr>
                         <form id="id-form-vm-live-migrate">
                             <div class="form-group row">
-                                <label for="id-host" class="col-sm-2 col-form-label">选择目标宿主机</label>
+                                <label for="id-host" class="offset-sm-1 col-sm-2 col-form-label">选择目标宿主机</label>
                                 <div class="col-sm-7">
                                     <select name="host_id" class="form-control" id="id-host">
                                         <option value="">--</option>
