--- a/vms/templates/vm_mount_pci.html
+++ b/vms/templates/vm_mount_pci.html
@@ -7,7 +7,7 @@
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>挂载PCI设备</strong></span>
+                <span class="card-title"><strong>挂载本地设备设备</strong></span>
                 <div class="float-right">
                     <a class="btn btn-sm btn-info" href="{% url 'device:pci-list' %}">PCI设备列表</a>
                 </div>
