--- a/device/templates/pci_mount.html
+++ b/device/templates/pci_mount.html
@@ -5,7 +5,7 @@
 {% block title %}PCI设备挂载{% endblock %}
 
 {% block boby %}
-    <div class="container-fluid offset-md-1 col-md-10">
+    <div class="container-fluid">
         <div class="card">
             <div class="card-header">
                 <span class="card-title"><strong>PCI设备挂载</strong></span>
