--- a/vms/templates/vm_disk_expand.html
+++ b/vms/templates/vm_disk_expand.html
@@ -32,8 +32,9 @@
                         </dl>
                         <form id="id-form-vm">
                             <div class="form-group row">
-                                <div class="col-sm-10">
-                                    <div class="input-group mb-3">
+                                <label for="id-disk-expand" class="offset-sm-1 col-sm-2 col-form-label">输入系统盘扩容值</label>
+                                <div class="col-sm-7">
+                                    <div class="input-group mb-3" id="id-disk-expand">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">扩容大小</span>
                                         </div>
@@ -42,9 +43,9 @@
                                         <div class="input-group-append">
                                             <span class="input-group-text">GB</span>
                                         </div>
-                                        <div class="input-group-append">
-                                            <span class="input-group-text">扩容后大小为<span id="id-expand-after-size" class="text-warning"></span> GB</span>
-                                        </div>
+{#                                        <div class="input-group-append">#}
+{#                                            <span class="input-group-text">扩容后大小为<span id="id-expand-after-size" class="text-warning"></span> GB</span>#}
+{#                                        </div>#}
                                     </div>
                                 </div>
                             </div>
