增加对用户屏蔽vlan功能，暂时vlan接口增加该设置。注释名称修改。

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% block title %}关于{% endblock %}
 
 {% block boby %}
     <div class="d-flex justify-content-center align-items-center h-100 bg-light">
