--- a/vpn/templates/vpn_list.html
+++ b/vpn/templates/vpn_list.html
@@ -23,8 +23,8 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong><a class="btn btn-primary" href="">VPN列表 ({{ count }})</a></strong></span>
-                <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-login-log' %}">VPN登录日志列表 ({{ vpn_login_log_count }})</a></strong></span>
+                <span class="card-title"><strong><a class="btn btn-primary" href="">VPN用户 ({{ count }})</a></strong></span>
+                <span class="card-title"><strong><a class="btn btn-outline-primary" href="{% url 'vpn:vpn-login-log' %}">VPN登录日志 ({{ vpn_login_log_count }})</a></strong></span>
                 <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vpn:vpn-add' %}">创建VPN</a></span>
             </div>
             <div class="card-body">
