文案：云主机修改虚拟机

--- a/device/templates/pci_list.html
+++ b/device/templates/pci_list.html
@@ -13,7 +13,7 @@
             <div class="card-header">
                 <span class="card-title"><strong>PCI设备列表 ({{ count }})</strong></span>
 {#                <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vms:vm-create' %}">#}
-{#                    创建云主机#}
+{#                    创建虚拟机#}
 {#                </a></span>#}
             </div>
             <div class="card-body">
@@ -78,7 +78,7 @@
                     <th>ID</th>
                     <th>设备类型</th>
                     <th>宿主机</th>
-                    <th>云主机</th>
+                    <th>虚拟机</th>
                     <th>挂载时间</th>
                     <th width="180px">备注</th>
                     <th>操作</th>
