--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
                     <h5 class="card-title">{% trans '关于EVCloud' %} <a href="{% url 'docs:docs' %}#/changelog"
                                                                       target="view_window">
                         {% trans '版本变更' %}</a></h5>
-                    <p>{% trans 'EVCloud是一个轻量级云主机管理平台，追求功能实用，运行稳定，维护简单。' %}</p>
+                    <p>{% trans 'EVCloud是一个轻量级虚拟机管理平台，追求功能实用，运行稳定，维护简单。' %}</p>
                 </div>
                 <div class="p-2">
                     <h5>{% trans '研发团队' %}</h5>
