--- a/templates/app_nav.html
+++ b/templates/app_nav.html
@@ -59,7 +59,7 @@
         </tr>
 
         <tr>
-            <td style="color: #0072c9" class="border-top-0">【云主机模板配置】</td>
+            <td style="color: #0072c9" class="border-top-0">【虚拟机模板配置】</td>
             <td class="border-top-0">
                 <a class="btn btn-outline-secondary btn-sm btn-block" href="/admin/image/image/"
                    role="button" target="_blank"><strong class="text-danger">*&nbsp;</strong>系统镜像</a>
@@ -76,22 +76,22 @@
         </tr>
 
         <tr>
-            <td style="color: #0072c9" class="border-top-0">【云主机信息管理】</td>
+            <td style="color: #0072c9" class="border-top-0">【虚拟机信息管理】</td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block" href="/admin/vms/vm/"
-                   role="button" target="_blank">云主机</a>
+                   role="button" target="_blank">虚拟机</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block" href="/admin/vms/vmarchive/"
-                   role="button" target="_blank">云主机归档表</a>
+                   role="button" target="_blank">虚拟机归档表</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block" href="/admin/vms/vmdisksnap/"
-                   role="button" target="_blank">云主机快照</a>
+                   role="button" target="_blank">虚拟机快照</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block" href="/admin/vms/migratetask/"
-                   role="button" target="_blank">云主机迁移记录</a>
+                   role="button" target="_blank">虚拟机迁移记录</a>
             </td>
             <td class="border-top-0">
                 <a class="btn btn-outline-info btn-sm btn-block" href="/admin/novnc/token/"
