--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load custom_tags %}
 <html lang="zh-hans">
 <head>
-    <title>登录 | 云主机平台</title>
+    <title>登录 | 虚拟机平台</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.4.1/css/bootstrap.min.css' %}">
 </head>
@@ -12,7 +12,7 @@
     <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
         <div class="card border-info" style="min-width: 400px">
             <div class="card-header bg-info text-center">
-                <span class="card-title h5">云主机平台EVCloud登录</span>
+                <span class="card-title h5">虚拟机平台EVCloud登录</span>
             </div>
             <div class="card-body">
                 {% if form.errors %}
