--- a/vdisk/templates/vdisk_list.html
+++ b/vdisk/templates/vdisk_list.html
@@ -91,7 +91,7 @@
                         <th>容量</th>
                         <th>用户</th>
                         <th>创建时间</th>
-                        <th>挂载云主机</th>
+                        <th>挂载虚拟机</th>
                         <th>挂载时间</th>
                         <th>状态</th>
                         <th>备注</th>
