--- a/vms/templates/vm_detach_ip_list.html
+++ b/vms/templates/vm_detach_ip_list.html
@@ -14,12 +14,12 @@
                 <span class="card-title"><strong><a class="btn btn-primary" href="">移除IP地址列表</a></strong></span>
             </div>
             <div class="">
-                <div class="text-primary h4">云主机信息:</div>
+                <div class="text-primary h4">虚拟机信息:</div>
                 <div class="">
                     <dl class="row">
-                        <dt class="col-2 text-right">云主机UUID:</dt>
+                        <dt class="col-2 text-right">虚拟机UUID:</dt>
                         <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
-                        <dt class="col-2 text-right">云主机IP地址:</dt>
+                        <dt class="col-2 text-right">虚拟机IP地址:</dt>
                         <dd class="col-10">{{ vm.ipv4 }}</dd>
                         <dt class="col-2 text-right">镜像:</dt>
                         <dd class="col-10">{{ vm.image_name }}</dd>
