--- a/vms/templates/vms_create.html
+++ b/vms/templates/vms_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}创建云主机{% endblock %}
+{% block title %}创建虚拟机{% endblock %}
 
 {% block head %}{% endblock %}
 
@@ -9,9 +9,9 @@
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title">创建云主机</span>
+                <span class="card-title">创建虚拟机</span>
                 <span><a class="btn btn-sm btn-primary float-right" href="{% url 'vms:vms-list' %}">
-                    云主机列表
+                    虚拟机列表
                 </a></span>
             </div>
             <div class="card-body align-content-center">
