--- a/device/templates/pci_mount.html
+++ b/device/templates/pci_mount.html
@@ -29,11 +29,11 @@
                 <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
                 {% if device.vm %}
                     <div>
-                        <p class="text-warning h3">此PCI设备已被挂载使用，挂载云主机uuid: {{ device.vm.hex_uuid }}，IP地址: {{ device.vm.ipv4 }}</p>
+                        <p class="text-warning h3">此PCI设备已被挂载使用，挂载虚拟机uuid: {{ device.vm.hex_uuid }}，IP地址: {{ device.vm.ipv4 }}</p>
                     </div>
                 {% else %}
                     <div>
-                        <div class="text-success h4 col-sm-4">可供挂载的云主机：</div>
+                        <div class="text-success h4 col-sm-4">可供挂载的虚拟机：</div>
                         <div class="float-right col-sm-8">
                             <form role="form" class="form-horizontal" method="get" action="">
                                 <div class="input-group" style="">
