--- a/image/templates/image_vm_create.html
+++ b/image/templates/image_vm_create.html
@@ -3,13 +3,13 @@
 
 {% block head %}
 {% endblock %}
-{% block title %}创建镜像云主机{% endblock %}
+{% block title %}创建镜像虚拟机{% endblock %}
 
 {% block boby %}
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>创建镜像({{ image.name }})管理云主机</strong></span>
+                <span class="card-title"><strong>创建镜像({{ image.name }})管理虚拟机</strong></span>
                 <span><a class="btn btn-sm btn-primary float-right" href="{% url 'image:image-list' %}">
                     镜像列表
                 </a></span>
