--- a/reports/templates/reports_center.html
+++ b/reports/templates/reports_center.html
@@ -41,7 +41,7 @@
                                 <th>总内存</th>
                                 <th>已使用内存</th>
                                 <th>内存使用率</th>
-                                <th>云主机数</th>
+                                <th>虚拟机数</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
@@ -58,7 +58,7 @@
                                 <th>总内存</th>
                                 <th>已使用内存</th>
                                 <th>内存使用率</th>
-                                <th>云主机数</th>
+                                <th>虚拟机数</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
