--- a/reports/templates/reports_list.html
+++ b/reports/templates/reports_list.html
@@ -47,7 +47,7 @@
                                 <th>总内存</th>
                                 <th>已使用内存</th>
                                 <th>内存使用率</th>
-                                <th>云主机数</th>
+                                <th>虚拟机数</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -80,7 +80,7 @@
                                 <th>总内存</th>
                                 <th>已使用内存</th>
                                 <th>内存使用率</th>
-                                <th>云主机数</th>
+                                <th>虚拟机数</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -114,7 +114,7 @@
                                 <th>总内存</th>
                                 <th>已使用内存</th>
                                 <th>内存使用率</th>
-                                <th>云主机数</th>
+                                <th>虚拟机数</th>
                             </tr>
                             </thead>
                             <tbody>
