--- a/vdisk/templates/vdisk_mount_to_vm.html
+++ b/vdisk/templates/vdisk_mount_to_vm.html
@@ -32,11 +32,11 @@
                 <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
                 {% if disk.vm %}
                     <div>
-                        <p class="text-warning h3">此硬盘不能挂载，硬盘已被挂载使用，挂载云主机uuid: {{ disk.vm.hex_uuid }}，IP: <a href="{% url 'vms:vm-detail' vm_uuid=disk.vm.uuid %}">{{ disk.vm.ipv4 }}</a></p>
+                        <p class="text-warning h3">此硬盘不能挂载，硬盘已被挂载使用，挂载虚拟机uuid: {{ disk.vm.hex_uuid }}，IP: <a href="{% url 'vms:vm-detail' vm_uuid=disk.vm.uuid %}">{{ disk.vm.ipv4 }}</a></p>
                     </div>
                 {% else %}
                     <div>
-                        <div class="text-success h4 col-sm-4">可供挂载的云主机：</div>
+                        <div class="text-success h4 col-sm-4">可供挂载的虚拟机：</div>
                         <div class="float-right col-sm-8">
                             <form role="form" class="form-horizontal" method="get" action="">
                                 <div class="input-group" style="">
