--- a/vms/templates/vm_live_migrate.html
+++ b/vms/templates/vm_live_migrate.html
@@ -3,25 +3,25 @@
 {% load  sizeformat %}
 {% load  mathfilters %}
 
-{% block title %}动态迁移云主机{% endblock %}
+{% block title %}动态迁移虚拟机{% endblock %}
 
 {% block boby %}
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>动态迁移云主机</strong></span>
+                <span class="card-title"><strong>动态迁移虚拟机</strong></span>
                 <div class="float-right">
-                    <a class="btn btn-sm btn-success" href="{% url 'vms:vm-create' %}">创建云主机</a>
-                    <a class="btn btn-sm btn-info" href="{% url 'vms:vms-list' %}">云主机列表</a>
+                    <a class="btn btn-sm btn-success" href="{% url 'vms:vm-create' %}">创建虚拟机</a>
+                    <a class="btn btn-sm btn-info" href="{% url 'vms:vms-list' %}">虚拟机列表</a>
                 </div>
             </div>
             <div class="card-body">
                 <div class="">
-                    <div class="text-primary h4">云主机信息:</div>
+                    <div class="text-primary h4">虚拟机信息:</div>
                     <div class="">
                         <dl class="row">
-                            <dt class="col-2 text-right">云主机UUID:</dt> <dd class="col-10" id="id-vm-uuid">{{ vm.hex_uuid }}</dd>
-                            <dt class="col-2 text-right">云主机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
+                            <dt class="col-2 text-right">虚拟机UUID:</dt> <dd class="col-10" id="id-vm-uuid">{{ vm.hex_uuid }}</dd>
+                            <dt class="col-2 text-right">虚拟机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
                             <dt class="col-2 text-right">CPU数:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
                             <dt class="col-2 text-right">内存:</dt> <dd class="col-10">{{ vm.mem }} GB</dd>
                             <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
